# LLM-Embeddings

./: .pre-commit-config.yaml  README.md  pyproject.toml
data/prompts/: prompt-templates.csv
data/results/: embeddings-sotu-ada-002.parquet  embeddings-sotu-voyage-lite-01.parquet
data/results/embeddings/: embeddings-custom-prompts-years-ada-002.parquet  embeddings-custom-prompts-years-voyage-lite-01.parquet  embeddings-sotu-voyage-lite-01.parquet
data/results/speeches/: speeches_with_presidents.parquet
data/speeches/: speech_dataset.parquet
data/speeches/embeddings/: embeddings-ada-002-years-literals.pkl  embeddings-voyage-years-literals.pkl
notebooks/: 01-plotting_timeness_correlation.ipynb  02-token_distribution.ipynb  constants.py  data_loader.py  plots.py  timeness.parquet  token_distribution.ipynb
notebooks/.ipynb_checkpoints/: experiments-checkpoint.py  token_distribution-checkpoint.ipynb
notebooks/NYT/: decompressing.ipynb
notebooks/data/: prompts.parquet
notebooks/data/embeddings/: embeddings-literal-years-ada-002.parquet  embeddings-literal-years-voyage-lite-01.parquet  embeddings-sotu-ada-002.parquet
notebooks/data/speeches/: presidents.csv  speeches_sotu.parquet
notebooks/preprocessing/: 01-pre-processing.ipynb  1-get_prompts.ipynb  2-generate_prompt_embeddings.ipynb  3-pre-processing.ipynb
notebooks/preprocessing/.ipynb_checkpoints/: 3-pre-processing-checkpoint.ipynb
src/llm_embeddings/: constants.py  settings.py
src/llm_embeddings/loaders/: embedding_loader.py
src/llm_embeddings/models/: api_models.py  datasets.py
src/llm_embeddings/prompts/: parser.py
src/llm_embeddings/voyage/: experiment.py  (+3 more)
src/timeness/: settings.py
src/voyage/: embedding_generator.py  embedding_strategy.py  experiment.py  experiment_suite.py  model.py  settings.py
tests/test_voyage/: helper.py  test_embedding_generator.py  test_embedding_strategy.py  test_experiment.py  test_experiment_suite.py  test_model.py
(+16 files in other folders)
